[package]
name = "rustcolors"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A color manipulation utility for scientific visualization"
license = "MIT"
repository = "https://github.com/yourusername/rustcolors"
keywords = ["color", "visualization", "scientific", "cli"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[[bin]]
name = "rustcolors"
path = "src/main.rs"
